--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Bento UI</title>
   </head>
   <body>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        const animatedBg = document.createElement('div');
+        animatedBg.classList.add('animated-bg');
+        
+        document.body.appendChild(animatedBg);
+      });
+    </script>    
+    
     <div class="contenedor">
       <div class="caja uno">
         <img src="assets/Captura de pantalla 2024-09-11 105632.png" alt="Profile Picture">
@@ -36,10 +45,10 @@
 					  <input class="checkbox foth" type="radio" id="slide-4" name="slider" />
 					  <label for="slide-4"></label>
 					  <ul>
-						<li><span>Hello World 1</span></li>
-						<li><span>Hello World 2</span></li>
-						<li><span>Hello World 3</span></li>
-						<li><span>Hello World 4</span></li>
+						<li><span></span></li>
+						<li><span></span></li>
+						<li><span></span></li>
+						<li><span></span></li>
 					  </ul>
 					</div>
 				  </div>
