--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
     
     <div class="contenedor">
       <div class="caja uno">
-        <img src="assets/Captura de pantalla 2024-09-11 105632.png" alt="Profile Picture">
-        <h2>Iker Madariaga</h2>
-        <p>22 y/o full stack developer</p>
+        <div id="modelContainer">
+          <video id="backgroundVideo" autoplay muted loop>
+              <source src="assets/Grabación 2024-10-08 104051.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+          <div class="overlayText">
+              <h2>Iker Madariaga</h2>
+              <p>22 y/o full stack developer</p>
+          </div>
       </div>
+      </div>      
       <div class="caja dos">
         <div class="language">
             <img src="assets/descarga.png" alt="Bandera de España" id="spain-flag" class="flag">
@@ -73,7 +80,7 @@
 			</div>
 		  
       </div>
-      <div class="caja nueve"><iframe src="https://open.spotify.com/embed/playlist/679wCT6dVMDBxrYa5NcrXL?utm_source=generator&theme=1" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; picture-in-picture" loading="lazy" style="border-radius: 5px"></iframe></div>
+      <div class="caja nueve"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7xLGsyNyudqvgvAuzVjPQB?utm_source=generator&theme=0" width="100%" height="100vh" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
       <div class="caja diez">
         <div class="titulo2">Habilidades</div>
       </div>      
