--- a/index.html
+++ b/index.html
@@ -39,14 +39,19 @@
           <div class="caja cinco">
         <div style="text-align:center;padding:1em 0;"><iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=es&size=large&timezone=Europe%2FMadrid" width="100%" height="100%" frameborder="0" seamless></iframe> </div>
       </div>
-      <div class="caja seis">
-        <iframe src="https://api.wo-cloud.com/content/widget/?geoObjectKey=11298643&language=es&region=ES&timeFormat=HH:mm&windUnit=kmh&systemOfMeasurement=metric&temperatureUnit=celsius" name="CW2" scrolling="no" frameborder="0" style="border-radius: 5px"></iframe>
-      </div>
-      <div class="caja siete">7</div>
       <div class="caja once">
-        <div class="titulo">Sobre mí
+        <div class="titulo">Sobre mí 👆</div>
+        <div class="popup-text">
           <p>Profesional con experiencia en desarrollo web, tanto de interfaces como de backend. Me destaco por mi capacidad de adaptación, resolución de problemas y trabajo en equipo en diversos entornos laborales. Busco nuevos desafíos para seguir creciendo profesionalmente.</p>
         </div>
+      </div>
+      <div class="caja siete">
+        <a href="https://github.com/Iker02" target="_blank" class="github-link">
+            <img src="assets/Github-Logo-PNG.png" alt="GitHub Logo" class="github-logo">
+        </a>
+    </div>    
+      <div class="caja seis">
+        <iframe src="https://api.wo-cloud.com/content/widget/?geoObjectKey=11298643&language=es&region=ES&timeFormat=HH:mm&windUnit=kmh&systemOfMeasurement=metric&temperatureUnit=celsius" name="CW2" scrolling="no" frameborder="0" style="border-radius: 5px"></iframe>
       </div>
       
           <div class="caja ocho">
