--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           <p>Profesional con experiencia en desarrollo web, tanto de interfaces como de backend. Me destaco por mi capacidad de adaptación, resolución de problemas y trabajo en equipo en diversos entornos laborales. Busco nuevos desafíos para seguir creciendo profesionalmente.</p>
         </div>
       </div>
-      <div class="caja siete">
+      <div class="caja siete" id="videoContainer">
         <a href="https://github.com/Iker02" target="_blank" class="github-link">
-            <img src="assets/Github-Logo-PNG.png" alt="GitHub Logo" class="github-logo">
+            <img src="assets/octicon--logo-github-16.svg" alt="GitHub Logo" class="github-logo">
         </a>
-    </div>    
+    </div>     
       <div class="caja seis">
         <iframe src="https://api.wo-cloud.com/content/widget/?geoObjectKey=11298643&language=es&region=ES&timeFormat=HH:mm&windUnit=kmh&systemOfMeasurement=metric&temperatureUnit=celsius" name="CW2" scrolling="no" frameborder="0" style="border-radius: 5px"></iframe>
       </div>
